<resources>
    <string name="app_name">ColorBoxes</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="btn_red">RED</string>
    <string name="btn_yellow">YELLOW</string>
    <string name="btn_green">GREEN</string>
    <string name="how_to_play">How to play:</string>
    <string name="tap_the_box">Tab on the BOXES</string>
</resources>